--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.33.3",
     "@react-three/fiber": "^9.3.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.545.0",
